Added ability to execute multiple simultaneous encodes. Go to Global Options -> Process -> Maximum simultaneous encode jobs. This can be useful on a machine with many CPU cores.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -391,9 +391,9 @@
     <Compile Include="Extensions\WindowExtensions.cs" />
     <Compile Include="Model\Config\ConfigObservable.cs" />
     <Compile Include="Model\EncodeJobsXml.cs" />
-    <Compile Include="Model\EncodeProgress.cs" />
     <Compile Include="Model\EncodeResultStatus.cs" />
     <Compile Include="Model\EncodeCompleteReason.cs" />
+    <Compile Include="Model\FileEncodeProgress.cs" />
     <Compile Include="Model\FolderType.cs" />
     <Compile Include="Model\PresetFolder.cs" />
     <Compile Include="Model\PresetFolderStorage.cs" />
