Streamlined the source section headers. Made the summary text bold and large font Eliminated the prefix labels in favor of icons

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -910,6 +910,9 @@
     <Content Include="Encode_Complete.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Icons\ChapterMarkers.png" />
+    <Resource Include="Icons\Subtitles.png" />
+    <Resource Include="Icons\Audio.png" />
     <Resource Include="Icons\ImportExport.png" />
     <Resource Include="Icons\VidCoder32.png" />
     <Resource Include="Icons\Help.png" />
