Added workaround for startup hang issue.

--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -26,5 +26,7 @@
         <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0"/>
       </dependentAssembly>
     </assemblyBinding>
+    <!--  Workaround for https://github.com/RandomEngy/VidCoder/issues/366 / https://developercommunity.visualstudio.com/content/problem/244615/setfinalsizemaxdiscrepancy-getting-stuck-in-an-inf.html  -->
+    <AppContextSwitchOverrides value="Switch.System.Windows.Controls.Grid.StarDefinitionsCanExceedAvailableSpace=true"/>
   </runtime>
 </configuration>
