--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -90,10 +90,10 @@
       <Version>6.1.0.326</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AnyContainer">
-      <Version>1.0.0-beta201808123</Version>
+      <Version>1.0.0-beta201808141</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.AnyContainer.Unity">
-      <Version>1.0.0-beta201808123</Version>
+    <PackageReference Include="Microsoft.AnyContainer.DryIoc">
+      <Version>1.0.0-beta201808141</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="reactiveui" Version="8.5.1" />
@@ -121,7 +121,6 @@
       <Version>4.0.0</Version>
     </PackageReference>
     <PackageReference Include="UDE.CSharp" Version="1.1.0" />
-    <PackageReference Include="Unity" Version="5.8.6" />
     <PackageReference Include="valueinjecter" Version="3.1.3" />
   </ItemGroup>
   <ItemGroup>
@@ -519,6 +518,7 @@
     <Compile Include="Services\HandBrakeProxy\LocalScanProxy.cs" />
     <Compile Include="Services\HandBrakeProxy\RemoteProxyBase.cs" />
     <Compile Include="Services\HandBrakeProxy\RemoteScanProxy.cs" />
+    <Compile Include="Services\MainAppLogger.cs" />
     <Compile Include="Services\Notifications\BetaNotificationActivator.cs" />
     <Compile Include="Services\Notifications\BridgeToastNotificationDispatchService.cs" />
     <Compile Include="Services\Notifications\DesktopToastNotificationDispatchService.cs" />
