--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -88,6 +88,9 @@
       <Version>1.0.9</Version>
     </PackageReference>
     <PackageReference Include="DesktopBridge.Helpers" Version="1.1" />
+    <PackageReference Include="DynamicData">
+      <Version>6.5.1.2479</Version>
+    </PackageReference>
     <PackageReference Include="Fluent.Ribbon">
       <Version>7.0.0-alpha0419</Version>
     </PackageReference>
@@ -98,12 +101,12 @@
       <Version>1.0.0-beta201808141</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="reactiveui" Version="8.5.1" />
+    <PackageReference Include="reactiveui" Version="8.7.2" />
     <PackageReference Include="ReactiveUI.WPF">
-      <Version>8.5.1</Version>
+      <Version>8.7.2</Version>
     </PackageReference>
-    <PackageReference Include="Splat" Version="4.0.2" />
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.108" />
+    <PackageReference Include="Splat" Version="5.0.2" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.109.2" />
     <PackageReference Include="System.Reactive">
       <Version>4.0.0</Version>
     </PackageReference>
