--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -100,6 +100,9 @@
     <PackageReference Include="Microsoft.AnyContainer.DryIoc">
       <Version>1.0.0-beta201808141</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.CSharp">
+      <Version>4.5.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="reactiveui" Version="8.7.2" />
     <PackageReference Include="ReactiveUI.WPF">
