--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -422,6 +422,7 @@
     <Compile Include="Extensions\WindowExtensions.cs" />
     <Compile Include="LayoutPanels\TruncatePanel.cs" />
     <Compile Include="Model\AppThemeChoice.cs" />
+    <Compile Include="Model\EncodeCompleteTrigger.cs" />
     <Compile Include="Model\TitleCapitalizationChoice.cs" />
     <Compile Include="Model\Config\ConfigObservable.cs" />
     <Compile Include="Model\EncodeJobsXml.cs" />
