Changed local encoding mode to only support a single shared log file. Changed local vs worker process option to only take effect on app restart.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -537,6 +537,7 @@
     <Compile Include="Model\VideoSourceMetadata.cs" />
     <Compile Include="Model\Players\VlcPlayer.cs" />
     <Compile Include="Model\WhenFileExists.cs" />
+    <Compile Include="Services\AppLoggerFactory.cs" />
     <Compile Include="Services\AutoChangeTracker.cs" />
     <Compile Include="Services\ClipboardService.cs" />
     <Compile Include="Services\HandBrakeProxy\IScanProxy.cs" />
