Prep for adding list to log window

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -424,6 +424,7 @@
     <Compile Include="Model\AppThemeChoice.cs" />
     <Compile Include="Model\EncodeCompleteTrigger.cs" />
     <Compile Include="Model\LogColor.cs" />
+    <Compile Include="Model\LogOperationType.cs" />
     <Compile Include="Model\TitleCapitalizationChoice.cs" />
     <Compile Include="Model\Config\ConfigObservable.cs" />
     <Compile Include="Model\EncodeJobsXml.cs" />
@@ -638,6 +639,7 @@
     <Compile Include="ViewModel\DataModels\CopyMaskChoiceViewModel.cs" />
     <Compile Include="ViewModel\DataModels\LanguageViewModel.cs" />
     <Compile Include="ViewModel\DataModels\LevelChoiceViewModel.cs" />
+    <Compile Include="ViewModel\DataModels\LogViewModel.cs" />
     <Compile Include="ViewModel\DataModels\PickerViewModel.cs" />
     <Compile Include="ViewModel\DataModels\PresetFolderViewModel.cs" />
     <Compile Include="ViewModel\DataModels\RotationViewModel.cs" />
