Fixed full x264 options string getting cut off when too long. Added required .NET framework version back to app.config to give better error message for portable version.

--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -7,6 +7,10 @@
 		<!--<add key="SettingsDirectory" value="." />-->
 	</appSettings>
 
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
+  </startup>
+
   <runtime>
     <!--  Workaround for https://github.com/RandomEngy/VidCoder/issues/366 / https://developercommunity.visualstudio.com/content/problem/244615/setfinalsizemaxdiscrepancy-getting-stuck-in-an-inf.html  -->
     <AppContextSwitchOverrides value="Switch.System.Windows.Controls.Grid.StarDefinitionsCanExceedAvailableSpace=true"/>
