Added options to clear succeeded or clear failed from the completed items list. Changed "Delete" menu option on queue to "Remove from queue" to make it less ambiguous.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -971,6 +971,10 @@
     <Content Include="Encode_Complete.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Icons\ClearFailed.png" />
+    <Resource Include="Icons\ClearSucceeded.png" />
+    <Resource Include="Icons\Clear.png" />
+    <Resource Include="Icons\Remove.png" />
     <Resource Include="Icons\Reload.png" />
     <Resource Include="Icons\ChapterMarkers.png" />
     <Resource Include="Icons\Subtitles.png" />
