Replaced WCF named pipe worker process communication with a new .NET Core compatible library.

--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -14,5 +14,12 @@
   <runtime>
     <!--  Workaround for https://github.com/RandomEngy/VidCoder/issues/366 / https://developercommunity.visualstudio.com/content/problem/244615/setfinalsizemaxdiscrepancy-getting-stuck-in-an-inf.html  -->
     <AppContextSwitchOverrides value="Switch.System.Windows.Controls.Grid.StarDefinitionsCanExceedAvailableSpace=true"/>
+
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
 </configuration>
