--- a/VidCoderCommon/VidCoderCommon.csproj
+++ b/VidCoderCommon/VidCoderCommon.csproj
@@ -50,7 +50,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="reactiveui" Version="9.4.1" />
     <PackageReference Include="ReactiveUI.WPF">
       <Version>9.4.1</Version>
@@ -79,7 +79,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -92,6 +91,10 @@
     <Compile Include="Extensions\JsonDurationExtensions.cs" />
     <Compile Include="Extensions\ParExtensions.cs" />
     <Compile Include="Extensions\ScalingModeExtensions.cs" />
+    <Compile Include="IHandBrakeEncodeWorker.cs" />
+    <Compile Include="IHandBrakeEncodeWorkerCallback.cs" />
+    <Compile Include="IHandBrakeScanWorker.cs" />
+    <Compile Include="IHandBrakeScanWorkerCallback.cs" />
     <Compile Include="IHandBrakeWorker.cs" />
     <Compile Include="IHandBrakeWorkerCallback.cs" />
     <Compile Include="JsonConverters\SourceTypeConverter.cs" />
@@ -99,6 +102,7 @@
     <Compile Include="Model\AudioEncoding.cs" />
     <Compile Include="Model\CopyMaskChoice.cs" />
     <Compile Include="Model\DeserializeOnlyAttribute.cs" />
+    <Compile Include="Model\HandBrakeWorkerAction.cs" />
     <Compile Include="Model\JsonEncodeFactory.cs" />
     <Compile Include="Model\OutputAudioTrackInfo.cs" />
     <Compile Include="Model\OutputSizeInfo.cs" />
