--- a/VidCoderCommon/VidCoderCommon.csproj
+++ b/VidCoderCommon/VidCoderCommon.csproj
@@ -112,7 +112,7 @@
     <Compile Include="Model\Preset.cs" />
     <Compile Include="Model\SourceSubtitle.cs" />
     <Compile Include="Model\SourceType.cs" />
-    <Compile Include="Model\SrtSubtitle.cs" />
+    <Compile Include="Model\FileSubtitle.cs" />
     <Compile Include="Model\VCSubtitles.cs" />
     <Compile Include="Model\VCAnamorphic.cs" />
     <Compile Include="Model\VCContainer.cs" />
