Added note about bug workaround.

--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -12,7 +12,7 @@
   </startup>
 
   <runtime>
-    <!--  Workaround for https://github.com/RandomEngy/VidCoder/issues/366 / https://developercommunity.visualstudio.com/content/problem/244615/setfinalsizemaxdiscrepancy-getting-stuck-in-an-inf.html  -->
+    <!--  Workaround for https://github.com/RandomEngy/VidCoder/issues/366 / https://developercommunity.visualstudio.com/content/problem/244615/setfinalsizemaxdiscrepancy-getting-stuck-in-an-inf.html - Fixed in .NET Framework 4.8   -->
     <AppContextSwitchOverrides value="Switch.System.Windows.Controls.Grid.StarDefinitionsCanExceedAvailableSpace=true"/>
 
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
